# SpTeCE

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  JUSTFILE  LICENSE.md  README.md
.github/workflows/: ci.yml
crates/sparse-core/: Cargo.toml
crates/sparse-core/src/: lib.rs
crates/sparse-csr/: Cargo.toml
crates/sparse-csr/src/: lib.rs
