[package]
name = "sparse-core"
version = "0.1.0"
edition = "2025"
description = "Core traits and types for SpTeCE sparse tensor engine"
license = "GNU GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde", "serde/derive"]